# getting-started-with-ai-agents

./: .gitignore  README.md  getting-started-with-ai-agents.org  pyproject.toml
src/getting_started_with_ai_agents/: __init__.py  instructor-scratchpad.py  llm.py  saturday_night_at_club_ubuntutechhive.py
src/getting_started_with_ai_agents/agents/: base.py  club_bouncer.py
src/getting_started_with_ai_agents/notebooks/: agents-scratchpad.py  crewai-trial--research-write-article.py  instructor-scratchpad.py
